Fix spacing around error messages related to coupon fields.

--- a/css/checkout-coupons-rtl-405-beta-4.css
+++ b/css/checkout-coupons-rtl-405-beta-4.css
@@ -159,6 +159,7 @@ body div.woocommerce .fc-wrapper .fc-coupon_code__collapsible .fc-coupon-code__a
 .fc-wrapper .fc-coupon-code-messages .woocommerce-error,
 .fc-wrapper .fc-coupon-code-messages .woocommerce-message {
   display: block;
+  margin-bottom: 10px;
 }
 
 .fc-wrapper .fc-coupon-code-messages .woocommerce-error li {
