--- a/sass/partials/_checkout-coupon-code.scss
+++ b/sass/partials/_checkout-coupon-code.scss
@@ -149,6 +149,7 @@ body div.woocommerce .fc-wrapper .fc-coupon_code__collapsible .fc-coupon-code__a
 .fc-wrapper .fc-coupon-code-messages .woocommerce-error,
 .fc-wrapper .fc-coupon-code-messages .woocommerce-message {
 	display: block;
+	margin-bottom: $global-spacing-extra-small;
 }
 
 .fc-wrapper .fc-coupon-code-messages .woocommerce-error li {
